@@ -4,6 +4,8 @@ import java.io.*;
 import java.net.*;
 import sleep.runtime.*;
 
+import java.util.*;
+
 public class SocketObject extends IOObject
 {
    protected Socket socket;
@@ -32,19 +34,69 @@ public class SocketObject extends IOObject
       }
    }
 
+   /** releases the socket binding for the specified port */
+   public static void release(int port)
+   {
+      String key = port + "";
+      
+      ServerSocket temp = null;
+      if (servers != null && servers.containsKey(key))
+      {
+         temp = (ServerSocket)servers.get(key);
+         servers.remove(key);
+ 
+         try
+         {
+            temp.close();
+         }
+         catch (Exception ex)
+         {
+            ex.printStackTrace();
+         }
+      }
+   }
+
+   private static Map servers;
+
+   private static ServerSocket getServerSocket(int port) throws Exception
+   {
+      String key = port + "";
+
+      if (servers == null)
+      {
+         servers = Collections.synchronizedMap(new HashMap());
+      }
+
+      ServerSocket server = null;
+
+      if (servers.containsKey(key))
+      {
+         server = (ServerSocket)servers.get(key);
+      }
+      else
+      {
+         server = new ServerSocket(port);
+         servers.put(key, server);
+      }
+
+      return server;
+   }
+ 
    public void listen(int port, int timeout, Scalar data, ScriptEnvironment env)
    {
       ServerSocket server = null;
 
       try
       {
-         server = new ServerSocket(port);
+//         server = new ServerSocket(port);
+         server = getServerSocket(port);
          server.setSoTimeout(timeout);
         
          socket = server.accept();
          socket.setSoLinger(true, 5);
 
-         server.close(); /* releases the bound and listening port, probably not a good idea for a massive server but for a scripting
+  //       server.close();
+ /* releases the bound and listening port, probably not a good idea for a massive server but for a scripting
                             lang API who cares */
 
          data.setValue(SleepUtils.getScalar(socket.getInetAddress().getHostAddress()));
@@ -61,7 +113,7 @@ public class SocketObject extends IOObject
 
       try
       {
-         if (server != null) { server.close(); }
+//         if (server != null) { server.close(); }
       }
       catch (Exception ex) { }
    }
